--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,9 @@ h2.switch {
 
 #banner {
   position: relative;
+  height: calc(250px + (1100px - 100vw) / 3);
   max-width: 1100px;
-  height: 250px;
+  min-height: 250px;
   background-color: #3498d8;
   color: #333;
   place-items: center;
