--- a/video/style.css
+++ b/video/style.css
@@ -93,6 +93,21 @@ p {
   transition: top 0.5s;
 }
 
+h2 {
+  color: #fff;
+  position: absolute;
+  bottom: 30%;
+  right: 6%;
+  width: 240px;
+  font-size: 16px;
+  font-family: "Bradley Hand", cursive;
+  opacity: 0;
+  transition: opacity 1s;
+}
+h2.show {
+  opacity: 1;
+}
+
 .step:last-of-type {
   padding-bottom: 5px;
 }
