--- a/studio2/styles.css
+++ b/studio2/styles.css
@@ -11,8 +11,25 @@
   /* left: 10%; */
   border-radius: 50%;
   display: inline-block;
+  cursor: pointer;
 }
+
+#sidebar {
+  display: flex;
+  flex-flow: column;
+  /* display: block; */
+  max-width: 300px;
+  height: 100vh;
+}
+
+h1 {
+  padding: 0px;
+  margin: 0px;
+}
+
 body {
+  display: flex;
+  flex-flow: row;
   background-color: gray;
   height: 100vh;
   width: 100vw;
@@ -20,18 +37,42 @@ body {
   max-height: 100vh;
   overflow: hidden;
 }
+
+#cat-div {
+  /* display: block; */
+  width: 100%;
+  height: 100%;
+}
+
 #data {
   display: flex;
   flex-wrap: wrap;
+  max-width: 150px;
+  height: 100%;
 }
 .datum {
   background-color: aqua;
-  margin: 10px auto;
-  padding: 10px;
-}
-h1 {
-  font-size: 24px;
+  margin: 5px auto;
+  padding: 0px;
+  cursor: pointer;
+  display: flex;
+  width: 100px;
 }
 h2 {
+  margin: auto;
+  display: inline;
+  font-size: 24px;
+  float: left;
+}
+h3 {
+  margin: auto;
+  display: inline;
   font-size: 20px;
+  float: right;
+}
+
+body {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
