--- a/studio2/styles.css
+++ b/studio2/styles.css
@@ -2,14 +2,12 @@
   text-align: center;
   align-items: center;
   height: 100px;
-  width: 100px;
+  width: 70px;
   line-height: 100px;
-  background-color: orange;
+  background-size: contain;
+  background-image: url("images/cat.png");
 
   position: absolute;
-  /* top: 20%; */
-  /* left: 10%; */
-  border-radius: 50%;
   display: inline-block;
   cursor: pointer;
 }
