--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -74,6 +74,9 @@ textarea {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.fa-robot.draggable {
+  transform: translate(0%, 0%);
+}
 
 .instructions {
   box-sizing: border-box;
