--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -1,6 +1,7 @@
 #sidebar {
   position: relative;
-  width: fit-content;
+  max-width: 215px;
+  min-width: 100px;
   display: inline-block;
 }
 
@@ -8,6 +9,7 @@
   position: relative;
   display: inline-block;
   width: 100%;
+  min-width: 409px;
   height: 100%;
 }
 
@@ -54,6 +56,8 @@ textarea {
   font-size: 18px;
   color: #ddd;
   line-height: 1.5;
+  white-space: pre;
+
   border: none;
   outline: none;
   caret-color: #f8f8f2;
@@ -74,14 +78,11 @@ textarea {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.fa-robot.draggable {
-  transform: translate(0%, 0%);
-}
 
 .instructions {
   box-sizing: border-box;
-  width: 215px;
   height: 100vh;
+  width: 100%;
   padding: 10px;
   row-gap: 10px;
   display: flex;
@@ -91,10 +92,25 @@ textarea {
 }
 
 body {
-  overflow: hidden;
   display: flex;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
+}
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  color: white;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  display: flex;
+}
+a {
+  color: white;
+  text-decoration: none;
+  margin: auto;
 }
 
 h1 {
