--- a/capstone/development/styles.css
+++ b/capstone/development/styles.css
@@ -22,3 +22,12 @@ ol {
 li {
   margin-top: 10px;
 }
+
+img {
+  width: 95%;
+  display: block;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
