--- a/capstone/development/styles.css
+++ b/capstone/development/styles.css
@@ -31,3 +31,20 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+img.sketch {
+  height: 80%;
+  width: auto;
+  position: relative;
+  transform: translate(0%, 0%);
+  top: 0%;
+  left: 0%;
+  margin: auto;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 100vw;
+}
