--- a/version3/davis_guessr/styles.css
+++ b/version3/davis_guessr/styles.css
@@ -1,6 +1,6 @@
 #map {
-  height: 400px;
-  width: 500px;
+  height: 300px;
+  width: 400px;
   z-index: 1;
   position: relative;
   opacity: 90%;
@@ -30,10 +30,10 @@ dialog {
   cursor: default;
 }
 
-/* #map.max {
+#map.max {
   height: 600px;
   width: 600px;
-} */
+}
 
 #map-div {
   position: absolute;
@@ -48,7 +48,7 @@ dialog {
   position: absolute;
   color: black;
   bottom: 15px;
-  right: 5px;
+  left: 5px;
   z-index: 5;
 }
 .fa-maximize:hover {
