--- a/version3/davis_guessr/styles.css
+++ b/version3/davis_guessr/styles.css
@@ -81,3 +81,10 @@ body {
   text-align: center;
   margin: 10px;
 }
+
+#compass {
+  width: 300px;
+  height: 300px;
+  border: 2px solid #333;
+  border-radius: 50%;
+}
