--- a/usability/styles.css
+++ b/usability/styles.css
@@ -64,6 +64,7 @@ dialog {
 #mask1:hover {
   transform: scale(1.5);
   z-index: 2;
+  cursor: pointer;
 }
 
 #mask2 {
@@ -78,6 +79,7 @@ dialog {
 #mask2:hover {
   transform: scale(1.5);
   z-index: 2;
+  cursor: pointer;
 }
 
 #mask3 {
