--- a/usability/soccer/styles.css
+++ b/usability/soccer/styles.css
@@ -9,3 +9,14 @@ body {
   margin: auto;
   background-color: green;
 }
+
+#back {
+  position: absolute;
+  font-size: xx-large;
+  text-align: center;
+  margin: 10px;
+}
+
+#back:hover {
+  cursor: pointer;
+}
