--- a/version3/soccer/styles.css
+++ b/version3/soccer/styles.css
@@ -20,3 +20,16 @@ body {
 #back:hover {
   cursor: pointer;
 }
+
+#game {
+  display: flex;
+  height: fit-content;
+  width: fit-content;
+  margin: auto;
+  flex-direction: column;
+}
+
+.bar {
+  height: 40px;
+  background-color: orange;
+}
