--- a/version3/davis_guessr/styles.css
+++ b/version3/davis_guessr/styles.css
@@ -10,8 +10,9 @@ dialog {
   position: absolute;
   top: 40%;
   z-index: 4;
-  font-size: x-large;
+  font-size: large;
 }
+
 dialog#help {
   top: 50%;
   left: 50%;
